TSR-141 - Fix oversize image break on maintenance page

--- a/src/Resources/app/storefront/src/scss/page/error/_maintenance.scss
+++ b/src/Resources/app/storefront/src/scss/page/error/_maintenance.scss
@@ -1,3 +1,14 @@
+
+$logo-max-height: 50px;
+
+.is-ctl-maintenance {
+    .header-logo-main {
+        img {
+            max-height: $logo-max-height;
+        }
+    }
+}
+
 .header-row {
     padding: 20px 0;
 }
@@ -22,4 +33,8 @@
     padding: 20px 0;
     position: absolute;
     bottom: 0;
+
+    img {
+        max-height: $logo-max-height;
+    }
 }
